k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: backend-prod
  labels:
    app: backend-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      serviceAccountName: backend-ksa
      containers:
        - name: backend-api
<<<<<<< HEAD
          image: us-central1-docker.pkg.dev/dev-test-498808/backend-repo/backend-api:latest
=======
          image: IMAGE_PLACEHOLDER
>>>>>>> 40501b6 (Adding manifest files)
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-svc
  namespace: backend-prod
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
